# TA-ComfyUI-Nodes-Pack

./: .gitignore  README.md  __init__.py  comfyui.json  model_links.md  pyproject.toml  ta_cleanup_switch.py  ta_directory_captioning.py  ta_directory_captioning_node.py  ta_discord_link.json  ta_discord_link.py  ta_ebu_lmstudio_vision_node.py  ta_filename_generator.py  ta_flux_guidance_gate.py  ta_help_link.py  ta_ksampler.py  ta_latent_preview.py  ta_llm_prompt_selector.py  ta_lmstudio_load_on_run.py  ta_lmstudio_model_selector.py  ta_lmstudio_smart_loader.py  ta_load_checkpoint_model_with_name.py  ta_load_diffusion_model_with_name.py  ta_load_gguf_model_with_name.py  ta_load_model_with_name.py  ta_model_choices.json  ta_model_presets.json  ta_model_presets.py  ta_prompt_controller.py  ta_prompt_hub.py  ta_sageattention_toggler.py  ta_sampler_preset.py  ta_sampler_presets.json  ta_save_image_optional.py  ta_save_image_with_prompt.py  ta_seedvr2_gate.py  ta_smart_llm.py  ta_smart_llm_models.json  ta_unified_model_switcher.py
.github/workflows/: publish.yml
example_workflows/: TA-FLEXMOD-LLM-v2.81.json  TA-FLEXMOD-LMS-v2.72.json  TA-FLEXMOD-LMS-v2.73.json  TA-FLEXMOD-LMS-v2.75.json  TA-FLEXMOD-LMS-v2.77.json  TA-FLEXMOD-LMS-v2.79.json  TA-FLEXMOD-LMS-v2.80.json
web/js/: ta_discord_link.js  ta_discord_link_ui.html  ta_help_link.js  ta_model_choices_editor_button.js  ta_model_choices_ui.html  ta_model_preset_editor_button.js  ta_model_presets_ui.html  ta_sampler_preset_button.js  ta_sampler_presets_ui.html
web/wiki/: help.md  index.html
workflow/: TA-QWEN-LMS-v2.00-simple.json
workflows/: TA-QWEN-LMS-v2.10-simple.json  TA-ZIMAGE-LMS-v4.30.json
