[project]
name = "TA-ComfyUI-Nodes-Pack"
version = "1.0.8"
description = "Some useful nodes for ComfyUI (model loader with model_name output & extensions for EBU-LMStudio & Filename Generator)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "tmode-1960", email = "info@thomo.art"}
]
keywords = ["comfyui", "nodes", "custom-nodes"]

dependencies = [
    # Hier können Sie erforderliche Python-Pakete auflisten
    # z.B. "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/tmode-1960/TA-ComfyUI-Nodes-Pack"
Repository = "https://github.com/tmode-1960/TA-ComfyUI-Nodes-Pack"
Issues = "https://github.com/tmode-1960/TA-ComfyUI-Nodes-Pack/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# ComfyUI Registry Konfiguration
[tool.comfy]
PublisherId = "tmode-1960"
DisplayName = "TA ComfyUI Nodes Pack"
Icon = ""  # Optional: URL zu einem Icon
